--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,13 @@
-== README
+=== dal Segno.
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
-
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
+A web app for community messaging. Users can post & reply to messages. Future features: 
+  -events
+  -calendar
+  -file sharing
 
 
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+written on Ruby on Rails 4, ruby version 2.0.0-p247
+
+created at General Assembly in Los Angeles
+
+Web Development Immersive, Fall 2013.
